TMDM-14728 Hibernate & Lucene upgrade (#1221)